<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/fondo_form"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivCartela"
                android:layout_width="135dp"
                android:layout_height="117dp"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/mejor_imposible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sombra"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck"
                    android:autofillHints=""
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/sYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Year"
                    android:minHeight="48dp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/gendre"
            tools:ignore="TextContrastCheck"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbScifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genD"
                tools:ignore="DuplicateSpeakableTextCheck,OnClick,TextContrastCheck,TouchTargetSizeCheck"
                android:onClick="onCheckBoxClicked"/>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cbThriller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/genA"
                tools:ignore="TextContrastCheck"
                android:onClick="onCheckBoxClicked"/>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cbHumor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/genH"
                tools:ignore="TextContrastCheck"
                android:onClick="onCheckBoxClicked"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp">

            <CheckBox
                android:id="@+id/cbTerror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/genT"
                tools:ignore="TextContrastCheck"
                android:onClick="onCheckBoxClicked"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cbAmor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/genR"
                android:onClick="onCheckBoxClicked"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cbInfantil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/genI"
                tools:ignore="TextContrastCheck"
                android:onClick="onCheckBoxClicked"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/tipo"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPelicula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/serie"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="55dp"/>

                <RadioButton
                    android:id="@+id/rbSerie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peli"
                    android:minHeight="48dp"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:padding="10dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>